[tool.poetry]
name = "btc-monitoring"
version = "0.1.0"
description = ""
authors = ["Alex <Al.V.Makarov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.10.5"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
